# acts-channel-py

./: README.md  example.py  pyproject.toml
acts_channel/: __init__.py  channel.py
acts_channel/proto/: __init__.py  acts_pb2.py  acts_pb2_grpc.py
proto/: acts.proto
src/: __init__.py  channel.py  example.py
src/proto/: acts_pb2.py  acts_pb2_grpc.py
tests/: acts.proto
