[project]
name = "acts-channel"
version = "0.1.0"
description = "acts channel client"
authors = [{ name = "yaojianping", email = "yaojianpin@sohu.com" }]
dependencies = [
    "grpcio>=1.67.0",
    "grpcio-tools>=1.67.0",
    "nanoid>=2.0.0",
    "result>=0.17.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
example = "python src/example.py"
