[project]
name = "acts-channel"
version = "0.3.0"
description = "acts channel client"
authors = [{ name = "yaojianping", email = "yaojianpin@sohu.com" }]
dependencies = ["nanoid>=2.0.0", "result>=0.17.0"]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
keywords = ["workflow", "acts-server"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
example = "python example.py"
